## Join us on Discord for active test builds and much more : [Click Here](https://discord.gg/6fHCRKnDc9)

## v2.10.3.7 Change Log
- [add] added OE3IDE Connectors and Tools link to the about box links
- [add] manuals added to about box links/manuals
- [add] new auto attenuate TX when PS is off options in Setup->Ant/Filters->Antenna
- [add] new auto attenuate RX options in Setup->General->Options-1
- [change] moved release notes button from setup to the about box
- [change] skin images are resized to button/panel/slider etc instead of relying on tile property
- [change] button clicks are ignored in button boxes that are faded
- [change] nf_1 and nf_2 has become nf, and will read from the trx container it is in (noise floor)
- [fix] variables that have name with _double now consider %precis=N%
- [fix] resolved issue where redraw of console controls became very slow after 8thOct Windows update
- [fix] button boxes filter/antenna would not save columns correctly
- [fix] fade on rx and fade on tx fixed for button boxes
- [fix] when in Tx rx1, selecting a bandstack entry will not updated it or attempt to change to it
- [fix] mox & ping tot now work for times greater than 59 seconds
- [fix] text overlay will now retrieve rx1 and rx2 data correctly

## v2.10.3.6 Main New Features
- database manager
- many new meter items, including rotator, band/filter/mode/antenna button boxes, text overlay and led indicator, much much more
- vfo meter item control now has user interactive elements
- new multimeter/data IO system
- some legacy UI items can be removed. This will be extended in the future
- improvements to NR2 including trained machine data
- coordinate system for multimeters to align things easier
- kenwood broadcast data options for cat1-4/tcpip cat
- autostart applications
- diversity memories
- additional midi and cat options/commands
- fn keys for cwx, including options to not need window focus
- cmASIO, including P1 & P2 support, for low latency audio