@@ -11,6 +11,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] manuals added to about box links/manuals
 - [add] new auto attenuate TX when PS is off options in Setup->Ant/Filters->Antenna
 - [add] new auto attenuate RX options in Setup->General->Options-1
+- [add] Discord integration, let others know when you are on air using the Discord button box. Get scrolling text for #general and #thetis-bot. Config in Setup->Networking->Discord
 - [change] moved release notes button from setup to the about box
 - [change] skin images are resized to button/panel/slider etc instead of relying on tile property
 - [change] button clicks are ignored in button boxes that are faded
